--- a/app/src/main/res/layout/customitem.xml
+++ b/app/src/main/res/layout/customitem.xml
@@ -4,26 +4,70 @@
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     app:cardCornerRadius="10dp"
+    android:background="@color/pure_black"
     app:cardUseCompatPadding="true">
 
     <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_width="411dp"
+        android:layout_height="96dp"
         android:padding="5dp">
+
         <ImageView
-            android:layout_width="100dp"
-            android:layout_height="80dp"
+            android:id="@+id/imgCard"
+            android:layout_width="87dp"
+            android:layout_height="76dp"
+            android:background="@color/pure_black"
             android:padding="0.75dp"
-            android:scaleType="centerCrop"
-            android:id="@+id/imgCard"/>
+            android:scaleType="centerCrop" />
+
         <TextView
-            android:layout_width="match_parent"
+            android:id="@+id/tView"
+            android:layout_width="88dp"
             android:layout_height="wrap_content"
-            android:layout_margin="10dp"
+            android:layout_marginStart="10dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginEnd="10dp"
+            android:layout_marginRight="10dp"
+            android:layout_marginBottom="10dp"
             android:layout_toRightOf="@+id/imgCard"
             android:text="title"
-            android:id="@+id/tView"
-            android:textAppearance="?android:attr/textAppearanceSmall" />
+            android:textAppearance="?android:attr/textAppearanceSmall"
+            android:textColor="#FFB37A24"
+            android:textSize="20dp"
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/textView"
+            android:layout_width="wrap_content"
+            android:layout_height="76dp"
+            android:layout_marginStart="10dp"
+            android:layout_marginLeft="-4dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginEnd="10dp"
+            android:layout_marginRight="10dp"
+            android:layout_marginBottom="10dp"
+            android:layout_toRightOf="@+id/tView"
+            android:textColor="#FFB37A24"
+            android:textStyle="italic"
+            android:text="General Product Recyclability" />
+
+        <TextView
+            android:id="@+id/textView5"
+            android:layout_width="187dp"
+            android:layout_height="wrap_content"
+            android:layout_alignBottom="@+id/textView"
+            android:layout_marginStart="10dp"
+            android:layout_marginLeft="19dp"
+
+            android:layout_marginTop="10dp"
+            android:visibility="invisible"
+            android:layout_marginEnd="10dp"
+            android:layout_marginBottom="26dp"
+            android:textStyle = "bold"
+            android:layout_toRightOf="@+id/tView"
+            android:text="TextView" />
+
     </RelativeLayout>
 
 </android.support.v7.widget.CardView>
