--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -25,7 +25,7 @@
     <color name="color_primary_variant">#4b01d0</color>
     <color name="color_secondary">#03dac6</color>
     <color name="color_secondary_variant">#018786</color>
-
+    <color name = "pure_black">#3A3434</color>
     <color name="color_background">#000000</color>
     <color name="color_surface">#121212</color>
     <color name="color_error">#cf6679</color>
