--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -69,7 +69,7 @@
                 <Button
                     android:id="@+id/invisibleButton"
                     android:layout_width="match_parent"
-                    android:layout_height="69dp"
+                    android:layout_height="58dp"
                     android:background="@drawable/round"
                     android:text="See Content again"
                     android:textColor="#FFB37A24"
@@ -93,6 +93,10 @@
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintVertical_bias="0.893" />
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    />
 
             </LinearLayout>
         </android.support.v7.widget.CardView>
