--- a/app/src/main/res/layout/activity_project_class_v2.xml
+++ b/app/src/main/res/layout/activity_project_class_v2.xml
@@ -7,10 +7,27 @@
     tools:context=".ProjectClassV2"
     android:background="#FFB37A24">
 
+    <Button
+        android:id="@+id/button5"
+        android:layout_width="343dp"
+        android:layout_height="50dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
+        android:background="@drawable/round"
+        android:text="Learn More About Recycling"
+        android:textColor="#FFB37A24"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.959" />
+
     <TextView
         android:id="@+id/textView9"
-        android:layout_width="225dp"
-        android:layout_height="37dp"
+        android:layout_width="224dp"
+        android:layout_height="51dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="348dp"
         android:layout_marginEnd="8dp"
